syntax = "proto3";

package pixelforging_grpc;

option go_package = "./src/backend/pb/pixelforging-grpc";


service PixelForging {
    rpc ExtractPalette(stream ExtractPaletteInput) returns (stream ExtractPaletteOutput);
}

message ExtractPaletteInput {
    bytes fileBytes = 1;
    string fileName = 2;
    string fileType = 3;
    // The following fields are optional and can be set to 0 if not needed
    // The following fields configure shape of the palette
    int32 colorsPerRow = 4;
    int32 colorWidth = 5; 
    int32 colorHeight = 6;
    int32 colorNum = 7;
}

message ExtractPaletteOutput {
    bytes paletteBytes = 1;
    string fileName = 2;
    string fileType = 3; 
}





